# finally

./: .sprite  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.claude/skills/: settings.local.json
backend/: pyproject.toml
backend/app/market/: __init__.py  base.py  cache.py  factory.py  models.py  simulator.py  vndirect.py
backend/app/market_data/: __init__.py  base.py  cache.py  factory.py  massive.py  models.py  simulator.py  sse.py
backend/tests/: conftest.py  test_cache.py  test_interface_conformance.py  test_market_cache.py  test_market_factory.py  test_market_models.py  test_market_simulator.py  test_market_vndirect.py  test_massive.py  test_models.py  test_simulator.py
independent-reviewer/.claude-plugin/: plugin.json
planning/: MARKET_DATA_DESIGN.md  MARKET_DATA_REVIEW.md  MARKET_DATA_SUMMARY.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  PLAN.md  REVIEW.md  SSI_API.md  VNDIRECT_API.md
planning/archive/: MARKET_DATA_DESIGN.md
